<resources>
    <string name="app_name">App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facilidade_no_controle_de_suas_contas">Facilidade no controle de suas contas.</string>
    <string name="gerencie">Gerencie</string>
    <string name="textview1">TextView</string>
    <string name="textview2">Não perca o vencimento de suas faturas</string>
    <string name="todo1">TODO</string>
    <string name="textview3">Cartão virtual</string>
    <string name="textview4">Pague e receba em qualquer lotérica</string>
    <string name="todo2">TODO</string>
    <string name="textview5">Facil controle de seus contratos</string>
    <string name="textview6">Gerenciador</string>
    <string name="textview7">Não perca o vencimento de suas faturas</string>
    <string name="notificacoes">Notificações</string>
</resources>
